--- a/Concrete_Strength_Prediction.ipynb
+++ b/Concrete_Strength_Prediction.ipynb
@@ -17,6 +17,16 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Predicting Concrete Compressive Strength Using Linear Regression in Python  \n",
+        "### By **Islambek Manap** | May 2025"
+      ],
+      "metadata": {
+        "id": "BBJK0WrAlDbp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Table of Contents\n",
         "### Introduction\n",
         "### 1. Load and Explore the Data  \n",
@@ -71,7 +81,7 @@
       "metadata": {
         "id": "XwI651r5_ZI6"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -98,7 +108,7 @@
       "metadata": {
         "id": "CzUfhCMIBlAK"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -115,7 +125,7 @@
         "id": "y0ZBYHJkCm6u",
         "outputId": "91d1d229-70bd-4bc0-9445-8a8c9e549717"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -521,7 +531,7 @@
       "metadata": {
         "id": "dFpUQHY6GcJJ"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -535,7 +545,7 @@
       "metadata": {
         "id": "AcPsg9nqHC7Y"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -562,7 +572,7 @@
         "id": "CgrgC69QHzhn",
         "outputId": "5bcae64c-bb42-4a94-e2f2-92af5dfd780d"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1003,7 +1013,7 @@
       "metadata": {
         "id": "_UgPvWd0IIrC"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1020,7 +1030,7 @@
         "id": "bQfpjHziIPvf",
         "outputId": "2a2e7fd1-c962-4515-a345-d6634f0c3886"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1055,7 +1065,7 @@
         "id": "wUKjCnNQIZtp",
         "outputId": "b5fceb76-c754-4744-c872-ca93a0a2c4f9"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1098,7 +1108,7 @@
         "id": "wYRscZzJJo-O",
         "outputId": "03337847-175e-47dd-cbaa-fe6e64c10fd4"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1153,7 +1163,7 @@
         "id": "8OrCpFBoQY54",
         "outputId": "bc82c4be-0b20-40f8-e479-cd0c59513a5f"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1225,7 +1235,7 @@
         "id": "H9ZcWl6WSCeD",
         "outputId": "5b092d70-ae40-4fae-e059-fe1eeaf8dd9f"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
