--- a/CS_RandomForest.ipynb
+++ b/CS_RandomForest.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPXWWsv6r6rmn4pgCYrRxeL",
+      "authorship_tag": "ABX9TyOe3qIJ8ydJv8kDvWgC/f5M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -112,7 +112,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "📊 1. Load and Export Data Set"
+        "#📊 1. Load and Export Data Set"
       ],
       "metadata": {
         "id": "PuIn7Ilk7rQ3"
@@ -540,15 +540,8 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "9m3c_-mj7tUM"
-      }
-    },
-    {
-      "cell_type": "markdown",
       "source": [
-        "🧠 2. Train Random Forest Model"
+        "#🧠 2. Train Random Forest Model"
       ],
       "metadata": {
         "id": "KPo_3UzIoDLD"
@@ -574,7 +567,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "📈 3. Model Evaluation"
+        "#📈 3. Model Evaluation"
       ],
       "metadata": {
         "id": "U6u3B2WWpzVu"
@@ -609,7 +602,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "📌 4. Feature Importance"
+        "#📌 4. Feature Importance"
       ],
       "metadata": {
         "id": "Kmuz-qJUxxQM"
@@ -667,7 +660,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "📉 5. Visualize Predictions"
+        "#📉 5. Visualize Predictions"
       ],
       "metadata": {
         "id": "Z33tCEYhzFZf"
@@ -712,7 +705,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "🔮 7. Predict with Custom Input"
+        "#🔮 6. Predict with Custom Input"
       ],
       "metadata": {
         "id": "JjNQdOOczmUW"
